--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "font-awesome": "^4.6.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -24,5 +25,12 @@
   "resolutions": {
     "jquery": "~2.1.4",
     "angular": "~1.5.3"
+  },
+  "overrides": {
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.css"
+      ]
+    }
   }
 }
