--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "font-awesome": "^4.6.3",
     "angular-utf8-base64": "^0.0.5",
     "immutable": "^3.8.1",
-    "angular-marked": "^1.2.0"
+    "angular-marked": "^1.2.0",
+    "highlightjs": "^9.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
